# dwsa

./: CMakeLists.txt  README
data/: blabla.flac  boom.flac  dwsa.desktop  end.flac  endlose.flac  endwin.flac  mart.ogv  wdzium.flac  window.ogv
data/icons/: dwsa.icns  icon.rc
data/sprites/doctor/: 1.ini  2.ini  3.ini  doc.ini
data/voices/: evil1.flac  evil10.flac  evil11.flac  evil12.flac  evil13.flac  evil14.flac  evil15.flac  evil16.flac  evil2.flac  evil3.flac  evil4.flac  evil5.flac  evil6.flac  evil7.flac  evil8.flac  evil9.flac  l1.flac  l10.flac  l11.flac  l12.flac  l13.flac  l14.flac  l2.flac  l3.flac  l4.flac  l5.flac  l6.flac  l7.flac  l8.flac  l9.flac  maze.flac  new.flac  no1.flac  no2.flac  no3.flac  no4.flac  s1.flac  s3.flac  s4.flac  security.flac  (+5 more)
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  corridor.c  dosowisko.c  empty.c  evil.c  machine.c  opening.c  plans.c  video.c  winda.c
